--- a/.template/manifest.toml.tmpl
+++ b/.template/manifest.toml.tmpl
@@ -1,14 +1,14 @@
 provides = \""${provides}"\"
 version = \""${version}"\"
-checksum = ""
-tarball = ""
-licence = ""
+checksum = \"\"
+tarball = \"\"
+licence = \"\"
 
 [commands]
 workingDir = \""${provides}"\"
-configure = "./configure {{ .ConfigureFlags }}"
-compile = "make"
-install = "make install"
+configure = \"./configure {{ .ConfigureFlags }}\"
+compile = \"make\"
+install = \"make install\"
 
 [profiles]
 [profiles.default]
